[gd_scene load_steps=6 format=3 uid="uid://c8v4rxffhvjvb"]

[ext_resource type="Script" path="res://Game Scenes/audio.gd" id="1_rubda"]
[ext_resource type="AudioStream" uid="uid://c165p5q24j4uw" path="res://Audio/SFX/Button Press.mp3" id="2_q4nj1"]
[ext_resource type="AudioStream" uid="uid://dc7aa201ijlbt" path="res://Audio/SFX/Bell Ding 2.mp3" id="3_jhlfb"]
[ext_resource type="AudioStream" uid="uid://ukundhlfk8un" path="res://Audio/SFX/Fill Up Noise.mp3" id="4_o54l5"]
[ext_resource type="AudioStream" uid="uid://dsn7bguwdima4" path="res://Audio/SFX/Fill Down Noise.mp3" id="5_b4jv4"]

[node name="Audio" type="Node"]
script = ExtResource("1_rubda")

[node name="Present Scenario Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Music"

[node name="Button Press" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_q4nj1")
bus = &"sfx"

[node name="Bell Ding" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_jhlfb")
volume_db = -15.0
bus = &"sfx"

[node name="Fill Up Noise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_o54l5")
bus = &"sfx"

[node name="Fill Down Noise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_b4jv4")
bus = &"sfx"

[connection signal="timeout" from="Present Scenario Timer" to="." method="_on_present_scenario_timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[connection signal="finished" from="Bell Ding" to="." method="_on_bell_ding_finished"]
